REFACTOR(title)<--Adding title for components-->

--- a/store/blocks/desktop/components/header/header-top-banner.jsonc
+++ b/store/blocks/desktop/components/header/header-top-banner.jsonc
@@ -8,6 +8,7 @@
     }
   },
   "flex-layout.row#banner-top__container-links": {
+    "title": "container banner top",
     "children": ["link#banner-top__link-one", "link#banner-top__link-two"],
     "props": {
       "fullwidth": true,
