--- a/store/blocks/global/components/search result/search-result-banner-top.jsonc
+++ b/store/blocks/global/components/search result/search-result-banner-top.jsonc
@@ -1,5 +1,6 @@
 {
   "flex-layout.row#global__search-result--banner-top": {
+    "title": "banner top",
     "children": ["rich-text#search-result--banner-top"],
     "props": {
       "horizontalAlign": "center",
@@ -7,6 +8,7 @@
     }
   },
   "rich-text#search-result--banner-top": {
+    "title": "banner text",
     "props": {
       "text": "ENVÍOS A TODO EL PAÍS",
       "textAlignment": "CENTER",
