--- a/store/blocks/global/components/search result/search-result-slider-product.jsonc
+++ b/store/blocks/global/components/search result/search-result-slider-product.jsonc
@@ -21,6 +21,7 @@
     }
   },
   "rich-text#global__search-result--slider-title": {
+    "title": "slider title",
     "props": {
       "text": "##### LOS MÁS VENDIDOS",
       "textAlignment": "CENTER",
