--- a/store/blocks/desktop/components/search-result/search-result.jsonc
+++ b/store/blocks/desktop/components/search-result/search-result.jsonc
@@ -1,5 +1,6 @@
 {
   "flex-layout.row#desktop__search-result--continer": {
+    "title": "search container",
     "children": ["flex-layout.col#desktop__search-result--continer"]
   },
   "flex-layout.col#desktop__search-result--continer": {
@@ -14,6 +15,7 @@
     }
   },
   "flex-layout.row#desktop__breadcrumb-and-order": {
+    "title": "container breadcrumb and order by",
     "children": [
       "breadcrumb.search#desktop__breadcrumb",
       "order-by.v2#desktop__search-order"
@@ -42,6 +44,7 @@
     }
   },
   "flex-layout.row#dektop__filter-and-gallery": {
+    "title": "container filter and gallery",
     "children": [
       "flex-layout.col#dektop__search-result--filter",
       "search-content#desktop__content"
@@ -52,6 +55,7 @@
     }
   },
   "flex-layout.col#dektop__search-result--filter": {
+    "title": "container filter",
     "children": ["filter-navigator.v3#desktop__search-filter"],
     "props": {
       "blockClass": "dektop__search-result--filter"
@@ -65,6 +69,7 @@
     }
   },
   "search-content#desktop__content": {
+    "title": "container gallery",
     "blocks": ["gallery", "not-found"]
   }
 }
