--- a/store/blocks/desktop/screen/footer/footer.desktop.jsonc
+++ b/store/blocks/desktop/screen/footer/footer.desktop.jsonc
@@ -1,5 +1,6 @@
 {
   "footer-layout.desktop": {
+    "title": "footer desktop",
     "children": ["flex-layout.row#desktop__footer-container"]
   }
 }
